# OpencvConcaveHull

./: CMakeLists.txt  README.md  concave_hull.cpp  concave_hull.h  main.cpp  output.h  pos_reader.cpp  vcpkg.json
docs/specs/: 2026-05-26-concave-hull-design.md
docs/superpowers/plans/: 2026-05-26-concave-hull-plan.md
src/: concave_hull.cpp  main.cpp  output.cpp  pos_reader.h  tests.cpp
